Workspace appending is greyed out in Edit Mode #61808

Closed
opened 2019-02-21 15:41:24 +01:00 by michael knubben · 10 comments

System Information
Operating system: Windows 10
Graphics card: Geforce GTX 1070

Blender Version
Broken: 2.80 2019-02-20 20:10

Short description of error
Workspace appending is greyed out in Edit Mode, but works in Object, Vertex Paint, Sculpt etc. modes
Duplicating is not greyed out, and functions correctly.
image.png

Exact steps for others to reproduce the error

  • Go into Edit mode
  • Click the + next to 'General' up top
  • You'll notice that everything's greyed out
**System Information** Operating system: Windows 10 Graphics card: Geforce GTX 1070 **Blender Version** Broken: 2.80 2019-02-20 20:10 **Short description of error** Workspace appending is greyed out in Edit Mode, but works in Object, Vertex Paint, Sculpt etc. modes Duplicating is not greyed out, and functions correctly. ![image.png](https://archive.blender.org/developer/F6679272/image.png) **Exact steps for others to reproduce the error** - Go into Edit mode - Click the + next to 'General' up top - You'll notice that everything's greyed out

Added subscriber: @michaelknubben

Added subscriber: @michaelknubben

#63266 was marked as duplicate of this issue

#63266 was marked as duplicate of this issue

#60478 was marked as duplicate of this issue

#60478 was marked as duplicate of this issue

Added subscriber: @brecht

Added subscriber: @brecht

It's because this uses the append operator internally which does not work in edit mode. Would be good to fix once but low priority.

It's because this uses the append operator internally which does not work in edit mode. Would be good to fix once but low priority.

Added subscribers: @DouglasEKnapp, @JacquesLucke

Added subscribers: @DouglasEKnapp, @JacquesLucke

Added subscriber: @Hucky

Added subscriber: @Hucky

This issue was referenced by 0a3e73a91f

This issue was referenced by 0a3e73a91fb06ca340e4de70a3ddd1ac037e9e33

This issue was referenced by b8ed75ab6d

This issue was referenced by b8ed75ab6dac269c848699d68a4d189b7c9a8f23

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Brecht Van Lommel self-assigned this 2019-07-03 20:45:37 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61808
No description provided.