Fix T61808: remove confusing graying out of workspace that already exist

This was meant to help users see which users are likely useful to add, but
it's not so obvious and there are cases where it's useful to re-append the
same workspace.